avatar added and links work now

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="avatar.jpg" alt="Фотография владельца" class="profile-photo">
+            <img src="https://avatars.githubusercontent.com/u/166637847?v=4" alt="Фотография владельца" class="profile-photo">
         </div>
     </header>
     
@@ -29,13 +29,13 @@
         <div class="container">
             <h2>Мои социальные сети</h2>
             <div class="social-links">
-                <a href="https://t.me/your_telegram" target="_blank" class="social-link telegram">
+                <a href="https://t.me/babichexe" target="_blank" class="social-link telegram">
                     <span>Telegram</span>
                 </a>
-                <a href="https://youtube.com/your_youtube" target="_blank" class="social-link youtube">
+                <a href="https://youtube.com/@babichexe" target="_blank" class="social-link youtube">
                     <span>YouTube</span>
                 </a>
-                <a href="https://tiktok.com/your_tiktok" target="_blank" class="social-link tiktok">
+                <a href="https://tiktok.com/babichexe" target="_blank" class="social-link tiktok">
                     <span>TikTok</span>
                 </a>
             </div>
