--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://youtube.com/@babichexe" target="_blank" class="social-link youtube">
                     <span>YouTube</span>
                 </a>
-                <a href="https://tiktok.com/babichexe" target="_blank" class="social-link tiktok">
+                <a href="https://tiktok.com/@babichexe" target="_blank" class="social-link tiktok">
                     <span>TikTok</span>
                 </a>
             </div>
