name and surname added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section class="about">
             <div class="container">
-                <h1>Имя Фамилия</h1>
+                <h1>Ivan Babich</h1>
                 <h2>Чем я занимаюсь</h2>
                 <p>Я профессиональный веб-разработчик с более чем 5-летним опытом создания современных и отзывчивых веб-сайтов. Специализируюсь на frontend-разработке с использованием HTML, CSS и JavaScript.</p>
                 <p>Моя цель — создавать не только функциональные, но и визуально привлекательные интерфейсы, которые обеспечивают исключительный пользовательский опыт.</p>
