text translated to english

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт-визитка</title>
+    <title>babich site</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,17 +17,17 @@
         <section class="about">
             <div class="container">
                 <h1>Ivan Babich</h1>
-                <h2>Чем я занимаюсь</h2>
-                <p>Я профессиональный веб-разработчик с более чем 5-летним опытом создания современных и отзывчивых веб-сайтов. Специализируюсь на frontend-разработке с использованием HTML, CSS и JavaScript.</p>
-                <p>Моя цель — создавать не только функциональные, но и визуально привлекательные интерфейсы, которые обеспечивают исключительный пользовательский опыт.</p>
-                <p>В свободное время я также занимаюсь mentoring, помогая новичкам освоить основы веб-разработки и начать карьеру в IT.</p>
+                <h2>What am I doing?</h2>
+                <p>I learn programming. I use C/C++, python and sometimes HTML with CSS in my works</p>
+                <p>My target is to open my own company in near future</p>
+                <p>I also do acting and try to learn some languages</p>
             </div>
         </section>
     </main>
     
     <footer>
         <div class="container">
-            <h2>Мои социальные сети</h2>
+            <h2>My social nets</h2>
             <div class="social-links">
                 <a href="https://t.me/babichexe" target="_blank" class="social-link telegram">
                     <span>Telegram</span>
