social nets icons added

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <h2>My social nets</h2>
             <div class="social-links">
                 <a href="https://t.me/babichexe" target="_blank" class="social-link telegram">
-                    <span>Telegram</span>
+                    <img src="https://img.icons8.com/?size=100&id=lUktdBVdL4Kb&format=png&color=FFFFFF" alt="telegram logo">
                 </a>
                 <a href="https://youtube.com/@babichexe" target="_blank" class="social-link youtube">
-                    <span>YouTube</span>
+                    <img src="https://img.icons8.com/?size=100&id=37326&format=png&color=FFFFFF" alt="youtube logo">
                 </a>
                 <a href="https://tiktok.com/@babichexe" target="_blank" class="social-link tiktok">
-                    <span>TikTok</span>
+                    <img src="https://img.icons8.com/?size=100&id=123922&format=png&color=FFFFFF" alt="tiktok logo">
                 </a>
             </div>
         </div>
