--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <a href="https://tiktok.com/@babichexe" target="_blank" class="social-link tiktok">
                     <img src="https://img.icons8.com/?size=100&id=123922&format=png&color=FFFFFF" alt="tiktok logo">
                 </a>
+                <a href="https://x.com/babichtw" target="_blank" class="social-link x">
+                    <img src="https://img.icons8.com/?size=100&id=01GWmP9aUoPj&format=png&color=FFFFFF" alt="x logo">
+                </a>
             </div>
         </div>
     </footer>
