--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <img src="https://img.icons8.com/?size=100&id=01GWmP9aUoPj&format=png&color=FFFFFF" alt="x logo">
                 </a>
             </div>
+            <div class="copyright">
+                <p>Copyright &copy; 2025 Ivan Babich. MIT License</p>
+            </div>
         </div>
     </footer>
 </body>
