--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <a href="https://x.com/babichtw" target="_blank" class="social-link x">
                     <img src="https://img.icons8.com/?size=100&id=01GWmP9aUoPj&format=png&color=FFFFFF" alt="x logo">
                 </a>
+                <a href="https://reddit.com/u/babichr" target="_blank" class="social-link reddit">
+                    <img src="https://img.icons8.com/?size=100&id=12518&format=png&color=FFFFFF" alt="reddit logo">
+                </a>
             </div>
             <div class="copyright">
                 <p>Copyright &copy; 2025 Ivan Babich. MIT License</p>
