button to new page added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div class="container">
             <img src="https://avatars.githubusercontent.com/u/166637847?v=4" alt="Фотография владельца" class="profile-photo">
         </div>
+
+        <div class="nav-links">
+                <a href="whatdoiuse.html" class="nav-link">See what do I use</a>
+            </div>
     </header>
     
     <main>
