--- a/whatdoiuse.html
+++ b/whatdoiuse.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Toolkit - What do I use for work?</title>
+    <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=9874&format=png&color=000000">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
