--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="nav-links">
-            <a href="whatdoiuse.html" class="nav-link">See what do I use</a>
+            <a href="toolkit/whatdoiuse.html" class="nav-link">See what do I use</a>
         </div>
     </header>
     
