--- a/toolkit/whatdoiuse.html
+++ b/toolkit/whatdoiuse.html
@@ -14,7 +14,7 @@
         <div class="divider"></div>
             
         <div class="nav-links">
-            <a href="index.html" class="nav-link">← Back to Main</a>
+            <a href="../index.html" class="nav-link">← Back to Main</a>
         </div>
     </header>
         
