--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>babich site</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=9874&format=png&color=000000">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         </div>
 
         <div class="nav-links">
-            <a href="toolkit/whatdoiuse.html" class="nav-link">See what do I use</a>
+            <a href="toolkit/" class="nav-link">See what do I use</a>
         </div>
     </header>
     
