--- a/toolkit/index.html
+++ b/toolkit/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Toolkit - What do I use for work?</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=9874&format=png&color=000000">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         <div class="divider"></div>
             
         <div class="nav-links">
-            <a href="../index.html" class="nav-link">← Back to Main</a>
+            <a href="../" class="nav-link">← Back to Main</a>
         </div>
     </header>
         
