--- a/toolkit/index.html
+++ b/toolkit/index.html
@@ -28,7 +28,7 @@
                         <i class="fas fa-desktop"></i>
                     </div>
                     <h3>Main PC</h3>
-                    <p>Intel Xeon / E5-2680v3 GTX 1660 / Super 16GB RAM</p>
+                    <p>Intel Xeon E5-2680v3 / GTX 1660 Super / 16GB RAM</p>
                 </div>
                     
                 <div class="hardware-item">
