Remove ← from toolkit/index.html

--- a/toolkit/index.html
+++ b/toolkit/index.html
@@ -14,7 +14,7 @@
         <div class="divider"></div>
             
         <div class="nav-links">
-            <a href="../" class="nav-link">← Back to Main</a>
+            <a href="../" class="nav-link">Back to Main</a>
         </div>
     </header>
         
