Change icon to babich.24

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>babich site</title>
-    <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=9874&format=png&color=000000">
+    <link rel="icon" type="image/jpg" href="./static/babich24.jpg">
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
