--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <h1>Ivan Babich</h1>
                 <h2>What am I doing?</h2>
-                <p>I learn programming. I use C/C++, python and sometimes HTML with CSS in my works</p>
+                <p>I learn programming. I use C/C++, Rust and Python in my works</p>
                 <p>My target is to open my own company in near future</p>
                 <p>I also do acting and try to learn some languages</p>
             </div>
